--- a/machine.html
+++ b/machine.html
@@ -99,7 +99,7 @@
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1933414'>Job Application for Senior Machine Learning Engineer at Sony Interactive Entertainment PlayStation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1933414'>Job Application for Senior Machine Learning Engineer at Sony Interactive Entertainment PlayStation</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -131,7 +131,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/the-yes/ffbd939f-fe2e-4270-bbe5-010be449188f'>The Yes - Software Engineer - Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/the-yes/ffbd939f-fe2e-4270-bbe5-010be449188f'>The Yes - Software Engineer - Machine Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -151,11 +151,11 @@ research?...</p>
 <p>Oct 16, 2019 ... We are looking for a Data Scientist, Machine Learning Engineer, or Research 
 Engineer to join the Cityblock Prototype Engineering team. You will work with?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/stridehealth/c019f01c-52aa-4ac7-802d-53fed87c4044'>Stride Health - Senior Data Scientist / Machine Learning (ML) Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/stridehealth/c019f01c-52aa-4ac7-802d-53fed87c4044'>Stride Health - Senior Data Scientist / Machine Learning (ML) Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4479095002'>Job Application for Machine Learning Researcher at Samsung Research America</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4479095002'>Job Application for Machine Learning Researcher at Samsung Research America</a></h5> 
 <p><span class="badge badge-light">Campbell Campbell</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -208,7 +208,7 @@ healthcare?...</p>
 <p>Oct 8, 2019 ... At Blueground, our vision is to make people feel at home wherever they choose 
 to live.To do this, we offer beautifully furnished and thoughtfully-equipped?...</p>
 <hr/>
-<h5><a href='https://neimanmarcus.referrals.selectminds.com/jobs/machine-learning-engineer-12731'>Machine Learning Engineer - Neiman Marcus Group Careers Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neimanmarcus.referrals.selectminds.com/jobs/machine-learning-engineer-12731'>Machine Learning Engineer - Neiman Marcus Group Careers Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -256,7 +256,7 @@ optimize deep learning models for efficient inference. These optimizations are?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://problogger.com/jobs/job/writer-for-a-i-machine-learning-cyber-security-blogs/?utm_source=feedburner&utm_medium=twitter&utm_campaign=Feed%3A+ProBloggerJobs+%28ProBlogger+Job+Board%29'>Writer for A.I., Machine Learning &amp; Cyber Security Blogs - ProBlogger Jobs</a></h5> 
+<h5><a href='https://problogger.com/jobs/job/writer-for-a-i-machine-learning-cyber-security-blogs/?utm_source=feedburner&utm_medium=twitter&utm_campaign=Feed%3A+ProBloggerJobs+%28ProBlogger+Job+Board%29'>Writer for A.I., Machine Learning &amp; Cyber Security Blogs - ProBlogger Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -274,7 +274,7 @@ ML;?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tensortechnologies.recruitee.com/o/machine-learning-engineer-2'>
+<h5><a href='https://tensortechnologies.recruitee.com/o/machine-learning-engineer-2'>
       Machine Learning Engineer - Tensor Technologies
     </a></h5> 
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
@@ -345,7 +345,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Sunnyvale  ?  Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/mercycorps/job/oMunbfwy'>Mercy Corps Careers - Consultant  - Software Engineering for Android Flutter App with Firebase ML Kit and Machine Learning Experience - Remote</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/mercycorps/job/oMunbfwy'>Mercy Corps Careers - Consultant  - Software Engineering for Android Flutter App with Firebase ML Kit and Machine Learning Experience - Remote</a></h5> 
 <p><span class="badge badge-light">Lagos, Nigeria</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -413,7 +413,7 @@ to?...</p>
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/asapp-2/447e93d3-528b-414a-897f-863077a2717a'>ASAPP - Machine Learning Platform Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/asapp-2/447e93d3-528b-414a-897f-863077a2717a'>ASAPP - Machine Learning Platform Engineer</a></h5> 
 <p><span class="badge badge-light">Buenos Aires  Buenos Aires</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -474,7 +474,7 @@ and?...</p>
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://mitre.referrals.selectminds.com/jobs/associate-machine-learning-engineer-7103'>Associate Machine Learning Engineer - MITRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/associate-machine-learning-engineer-7103'>Associate Machine Learning Engineer - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -500,7 +500,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
